# mygeopy

./: LICENSE.txt  pyproject.toml
.github/workflows/: ci.yml
mygeopy/: triangle.py
tests/: test_triangle.py
tests/.ipynb_checkpoints/: test_triangle-checkpoint.py
