[project]
name = "mygeopy"
version = "0.1.0a0"
description = "My python package for working with geometry."
authors = [{name = "Mackenzie Blanusa", email = "mblanusa@ldeo.columbia.edu"}]
license = "MIT"
license-files = ["LICENSE.txt"]

[project.urls]
Homepage = "https://github.com/MackenzieBlanusa/mygeopy"

[project.optional-dependencies]
tests = ["pytest"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]
